After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752066 - grl-bookmarks doesn't notify of removals
grl-bookmarks doesn't notify of removals
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2015-07-07 12:13 UTC by Iain Lane
Modified: 2015-07-07 14:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
grl-bookmarks: Notify about a removal if there was no error (1.04 KB, patch)
2015-07-07 12:13 UTC, Iain Lane
committed Details | Review

Description Iain Lane 2015-07-07 12:13:25 UTC
I noticed that deletions weren't being reflected in totem. This is why.

The bookmarks plugin fails to notify of removals if there is no error. Seems
backwards.
Comment 1 Iain Lane 2015-07-07 12:13:28 UTC
Created attachment 307003 [details] [review]
grl-bookmarks: Notify about a removal if there was no error

We were incorrectly checking that there *was* an error when deciding
whether to notify of removals. This led to missing notifications for
successful removals.
Comment 2 Bastien Nocera 2015-07-07 14:17:51 UTC
Review of attachment 307003 [details] [review]:

Yes, though the prefix for the commit should be "bookmarks: " not "grl-bookmarks: "
Comment 3 Iain Lane 2015-07-07 14:29:47 UTC
ta, please fix & push or lemme know if you want a new patch