bookmarks: Notify about a removal if there was no error

We were incorrectly checking that there *was* an error when deciding
whether to notify of removals. This led to missing notifications for
successful removals.

https://bugzilla.gnome.org/show_bug.cgi?id=752066